refactor: 删除@Autowired注解使用实例化注入, 并重命名一些Bean的命名方式